URI + other deprecation