@@ -2,6 +2,8 @@ package org.pente.subscriptions;
 
 import java.io.*;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.sql.*;
 
@@ -185,7 +187,7 @@ public class IOSReceiptServlet extends HttpServlet {
             obj.put("receipt-data", receiptDataStr);
             obj.put("password", sharedSecret);
 
-            final URL url = new URL(production ? PRODUCTION_URL : SANDBOX_URL);
+            final URL url = new URI(production ? PRODUCTION_URL : SANDBOX_URL).toURL();
             final HttpURLConnection conn = (HttpsURLConnection) url.openConnection();
             conn.setRequestMethod("POST");
             conn.setDoOutput(true);
@@ -250,6 +252,8 @@ public class IOSReceiptServlet extends HttpServlet {
             log4j.info("IOSReceiptServlet: received response: " + lines);
             e.printStackTrace();
             return false;
+        } catch (URISyntaxException e) {
+            throw new RuntimeException(e);
         }
     }
 
